add item details and editing functionality

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -15,3 +15,11 @@ body {
 hr {
   border-color: rgb(152, 196, 86);
 }
+
+.details {
+  color: antiquewhite;
+}
+
+.detaildescription {
+  font-size: larger;
+}
